src/components/CheckoutFunnel/OrderConfirmation/OrderConfirmation.module.scss
@import "styles/variables.scss";

.logo {
  margin-bottom: var(--vertical-spacing-normal);
}

.confirmation-text {
  margin-top: 60px;
}

.confirmation-text-row + .confirmation-text-row {
  margin-bottom: 10px;
}

.pill {
  padding: 10px 20px;
  text-align: center;
  background-color: rgba(var(--primary-color-rgb), 0.1);
  border-radius: 100px;
  display: flex;
  align-items: center;
  justify-content: center;

  i {
    margin-right: 10px;
  }
}

.section-title {
  font-weight: var(--font-weight-medium);
  padding-bottom: 10px;
  margin-bottom: 20px;
  margin-top: 70px;
  border-bottom: 1px solid rgba(var(--primary-color-rgb), 0.1);
}

.customer-info-grid {
  display: flex;
  flex-wrap: wrap;
  color: var(--primary-color);
  margin-top: 10px;
  justify-content: space-between;

  .customer-info-column {
    display: flex;
    flex-flow: column;
    min-width: 50%;
  }

  .info-cell {
    min-height: 80px;
    //min-width: 260px;
    white-space: nowrap;
    margin: 0 calc(var(--horizontal-spacing-normal) * 3)
      calc(var(--horizontal-spacing-normal) * 3) 0;
  }

  .cell-title {
    margin-bottom: 15px;
    font-size: var(--font-size-xl);
    font-weight: var(--font-weight-medium);
  }

  .card-img {
    width: 58px;
    height: 37px;
    background-image: url("../../../assets/images/visa-card.png");
    background-size: contain;
    background-position: center;
    background-repeat: no-repeat;
    display: inline-block;
    margin-right: 15px;
  }

  .text-row + .text-row {
    margin-top: 5px;
  }

  .text-row {
    display: flex;
    align-items: center;
    width: 100%;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;

    span {
      overflow: hidden;
      white-space: nowrap;
      text-overflow: ellipsis;
    }
  }
}

.bottom-actions {
  display: flex;
  align-items: center;
  justify-content: space-between;
  margin-top: 90px;
  margin-bottom: 50px;
  flex-wrap: wrap;

  .contact-us {
    display: flex;
    align-items: center;
    margin-bottom: 20px;
    margin-right: 20px;

    .chat-icon {
      font-size: 36px;
      color: var(--text-color-light);
      margin-right: 10px;
    }

    a {
      margin-left: 5px;
    }
  }

  .back-to-shopping {
    margin-bottom: 20px;
  }
}

// Responsiveness ------------------------------------------------------------

@media (max-width: $mobile-width) {
  .OrderConfirmation {
    padding-left: 16px;
    padding-right: 16px;
  }
  .confirmation-text {
    margin-top: 0;
  }

  .recommendations-container {
    display: none;
  }

  .confirmation-text-row {
    margin-bottom: 15px !important;
  }

  .pill {
    font-size: var(--font-size-xs);
  }

  .section-title {
    font-size: var(--font-size-md);
    margin-top: 40px;
  }
  .customer-info-grid {
    grid-column-gap: 20px;
    grid-row-gap: 30px;

    .info-cell {
      margin: 0 var(--horizontal-spacing-normal)
        var(--horizontal-spacing-normal) 0;
    }

    .cell-title {
      font-size: var(--font-size-sm);
      margin-bottom: 10px;
    }

    .text-row {
      font-size: var(--font-size-sm);
    }
  }

  .bottom-actions {
    flex-flow: column-reverse;
    align-items: center;
    margin-top: 40px;
    margin-bottom: 40px;

    .contact-us {
      margin-right: 0;
      font-size: var(--font-size-sm);

      .chat-icon {
        font-size: 20px;
      }
    }
  }
}

